k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: memos
  labels:
    name: memos
    app: memos
