k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memos
  namespace: memos
  labels:
    app: memos
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: memos
